--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,10 @@ body{
 
 
 .Navbar{
- background-color: hsla(0, 0%, 6%, .75);
+
+background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%, 0.053), hsla(215,20%,20%,.5),hsla(172, 57%, 67%, 0.053), hsla(172, 57%, 67%, 0));
+/* box-shadow: 0 5px 3px black; */
+ 
  color: hsl(173, 30%, 94%);
  top: 0;
  left: 0;
@@ -68,7 +71,7 @@ body{
     /* color: hsla(208, 41%, 61%, 1); */
 }
 
-.hero-container {
+#hero-container {
     width: 100vw;
     height: 100vh;
     background-color: hsla(208, 41%, 61%, .9);
@@ -94,23 +97,39 @@ body{
 }
 
 .Herocard{
-    max-width: 60vw;
-    max-height: 60vh;
+    min-height: fit-content;
+    min-width: fit-content;
     width: 60%;
-    height: fit-content;
+    height: 11em;
     z-index: 2;
     background-color: rgba(255, 255, 255, 0.45);
     margin-top: 14%;
     position: absolute;
-    font-size: 72px;
+    font-size: calc(16px + 1.5vw);
     font-family: RedHatDisplay;
+    box-shadow: 0 15px 15px rgba(0,0,0,.6); 
+    
+    user-select: none;
 
     
     
 }
 
+.Herocard>div{
+    user-select: none;
+}
+.Herocard>div:hover{
+    color: hsla(203, 80%, 95%);
+    font-size: calc(16px + 3vw);
+    font-style: italic;
+
+}
+
 .Herocard_text{
     z-index: 3;
+    padding-left: 10%;
+    font-style: italic;
+    /* margin-left: 2rem; */
 }
 
 
@@ -131,7 +150,7 @@ body{
 
 }
 
-.Aboutme{
+#aboutme-container{
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -161,13 +180,16 @@ body{
     line-height: 50px;
 }
 
-.Prof{
+#prof_container{
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction:column;
+    flex-wrap: nowrap;
     background-color: hsla(208, 41%, 61%, 0.4);
+    
     /* background-color:hsla(203, 80%, 70%); */
 }
 
@@ -194,4 +216,64 @@ body{
     height: 10vw;
     /* set height to pixels if you want angle to change with screen width */
    } 
+
+   /* .Herocard{
+       margin: 50px auto;
+       position: relative;
+       width: 240px;
+       height: 240px;
+       padding: 10px;
+       box-shadow: 0 0 20px rgba(0, 0, 0, .4); */
+       
+   /* } */
+   .Herocard>div{
+       /* position: absolute;
+       top: 10px;
+       left: 10px;
+       right: 10px;
+       bottom: 10px; */
+   }
+
+
+   .collapsible {
+    background-color: #eee;
+    color: hsla(208, 51%, 85%, 1);
+    cursor: pointer;
+    padding: 18px;
+    width: 50vw;
+    max-width: 60vw;
+    border: none;
+    text-align: left;
+    margin-left: 30%;
+    margin-right: 30%;
+    outline: none;
+    font-size: 32px;
+    /* flex-basis: 100%; */
+    margin-top: 10%;
+    /* position: auto; */
+    line-height: 50px;
+    border-radius: 50px;
+    background-color: #2A3D4D;
+    box-shadow: 0 15px 15px rgba(0,0,0,.6)
+
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: hsla(208, 51%, 85%, 1);
+    color:#2A3D4D;
+    border-width: 3px;
+    border: 3px;
+    border-color: black;
+    border-style:groove;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    max-width: 60vw
+  }
 
