--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,6 @@ body{
 .Navbar{
 
 background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%, 0.053), hsla(215,20%,20%,.5),hsla(172, 57%, 67%, 0.053), hsla(172, 57%, 67%, 0));
-/* box-shadow: 0 5px 3px black; */
  
  color: hsl(173, 30%, 94%);
  top: 0;
@@ -44,7 +43,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     text-align: right;
     user-select: none;
     padding-top: 1vh;
-    font-family:RedHatDisplay
+    font-family:RedHatDisplay;
 
     
     
@@ -54,7 +53,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
 
 
 .Navbar_items {
-    font-size: 32px;
+    font-size: calc(12px + 1.5vw);
     color:hsl(173, 30%, 94%);
     font-family: RedHat;
 }
@@ -99,6 +98,8 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
 .Herocard{
     min-height: fit-content;
     min-width: fit-content;
+    max-width: 100%;
+    max-height: 100%;
     width: 60%;
     height: 11em;
     z-index: 2;
@@ -114,19 +115,29 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     
     
 }
-
+@media screen {
+    
+}{
+    
+}
 .Herocard>div{
     user-select: none;
-}
-.Herocard>div:hover{
-    color: hsla(203, 80%, 95%);
-    font-size: calc(16px + 3vw);
+    color: #333;
+    font-size: calc(24px + 3vw);
     font-style: italic;
+    margin-left: 25%;
 
 }
+/* .Herocard>div:hover{
+    
+    color: midnightblue;
+    
+} */
+
 
 .Herocard_text{
     z-index: 3;
+    color: #333;
     padding-left: 10%;
     font-style: italic;
     /* margin-left: 2rem; */
@@ -146,9 +157,6 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     max-width:100vw;
 }
 
-.Typing{
-
-}
 
 #aboutme-container{
     width: 100vw;
@@ -156,12 +164,15 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: #333;
 }
 
 .Aboutme_header{
     padding-top: 1vh;
-    font-size: 72px;
+    font-size: calc(18px + 2.5vw);
     font-family: RedHatDisplay;
+    /* color: lightgray; */
+    color:hsl(173, 30%, 94%);
     /* flex-basis: 100%; */
 
 
@@ -169,7 +180,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
 
 .Aboutme_text{
     font-family: RedHat;
-    font-size: 27px;
+    font-size: calc(10px + 1vw);
     width: 50vw;
     padding-left: 31%;
     padding-right: 31%;
@@ -177,7 +188,8 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     flex-basis: 100%;
     margin-top: 10%;
     position: absolute;
-    line-height: 50px;
+    line-height: calc(20px + 4vh);
+    color: hsl(173, 30%, 94%);
 }
 
 #prof_container{
@@ -192,22 +204,6 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     
     /* background-color:hsla(203, 80%, 70%); */
 }
-
-/* header {
-    position: relative;
-    height: 300px;
-    background-image: linear-gradient(#ff9d2f, #ff6126);
-  }
-  
-  h1 {
-    padding: 100px 0;
-    font: 44px "Arial";
-    text-align: center;
-  }
-  
-  header h1 {
-    color: white;
-  } */
   
   svg {
     position: absolute;
@@ -217,63 +213,27 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     /* set height to pixels if you want angle to change with screen width */
    } 
 
-   /* .Herocard{
-       margin: 50px auto;
-       position: relative;
-       width: 240px;
-       height: 240px;
-       padding: 10px;
-       box-shadow: 0 0 20px rgba(0, 0, 0, .4); */
+   #Footer{
+       width: 100%;
+       height: 6vh;
+       font-size: 1rem;
+       background-color: #333;
+       color:  hsl(173, 30%, 90%);
+       display: flex;
+       user-select: none;
        
-   /* } */
-   .Herocard>div{
-       /* position: absolute;
-       top: 10px;
-       left: 10px;
-       right: 10px;
-       bottom: 10px; */
+
+       /* justify-content: space-between; */
+       
+   }
+
+   #type-sec{
+
    }
 
 
-   .collapsible {
-    background-color: #eee;
-    color: hsla(208, 51%, 85%, 1);
-    cursor: pointer;
-    padding: 18px;
-    width: 50vw;
-    max-width: 60vw;
-    border: none;
-    text-align: left;
-    margin-left: 30%;
-    margin-right: 30%;
-    outline: none;
-    font-size: 32px;
-    /* flex-basis: 100%; */
-    margin-top: 10%;
-    /* position: auto; */
-    line-height: 50px;
-    border-radius: 50px;
-    background-color: #2A3D4D;
-    box-shadow: 0 15px 15px rgba(0,0,0,.6)
 
-  }
-  
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .collapsible:hover {
-    background-color: hsla(208, 51%, 85%, 1);
-    color:#2A3D4D;
-    border-width: 3px;
-    border: 3px;
-    border-color: black;
-    border-style:groove;
-  }
-  
-  /* Style the collapsible content. Note: hidden by default */
-  .content {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
-    max-width: 60vw
-  }
+
+
+
 
