--- a/src/styles/Collapsible.css
+++ b/src/styles/Collapsible.css
@@ -29,10 +29,10 @@
     
 }
 
-p{
+.innerCollapse{
 
-    font-size: 18px;
-    line-height: 40px;
+    font-size: calc(10px + 1vh);
+    line-height: calc(15px + 2.5vh);
     font-family: RedHat, sans-serif;
 }
 
@@ -44,4 +44,14 @@ p{
     border-color: black;
     border-style:groove;
   } */
+
+
+  @media (max-width: 768px) {
+        .Collapsible{
+            max-width: 80vw;
+            width: 80vw;
+        }
+        
+  }
+
 
