--- a/src/styles/Collapsible.css
+++ b/src/styles/Collapsible.css
@@ -48,11 +48,11 @@
   } */
 
 
-@media (max-width: 425px){
+/* @media (max-width: 425px){
     .Collapsible{
         
     }
-}
+} */
 
   @media (max-width: 768px) {
         .Collapsible{
