--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
-body{
-    margin: 0;
+html,body{
+max-width: 100% !important;
+overflow-x: hidden !important;
+margin:0
 }
+
 
 /*Font Declarations*/
 @font-face{
@@ -25,14 +28,14 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
  display: flex;
  justify-content: space-evenly;
  position:fixed;
- padding: 0.5rem 1rem;
+ padding: 0.5rem 0rem .50rem 0.5rem;
  align-items: center;
  backdrop-filter: blur(8.5px);
  font-family:RedHatDisplay, sans-serif;
- font-size: calc(16px + 1.5vw);
+ font-size: calc(16px + 3vw);
  z-index: 10;
- -webkit-text-stroke-width: 1px;
- -webkit-text-stroke-color: #333;
+ -webkit-text-stroke-width: 2.5px;
+ -webkit-text-stroke-color: rgb(0, 0, 0);
 
  user-select: none;
 
@@ -199,8 +202,8 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     font-family: RedHat, sans-serif;
     font-size: calc(12px + 1vh);
     width: 50vw;
-    padding-left: 31%;
-    padding-right: 31%;
+    padding-left: 10rem;
+    padding-right: 10rem;
     max-width: 50vw;
     flex-basis: 100%;
     margin-top: 10%;
@@ -242,7 +245,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
        width: 100%;
        height: 100%;
        font-size: 1rem;
-       background-color: #333;
+       background-color: #161616;
        color:  hsl(173, 30%, 90%);
        display: flex;
        user-select: none;
@@ -312,6 +315,9 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
         margin-right: 5%;
         margin-top: 20%;
 
+    }
+    .Navbar{
+        -webkit-text-stroke-width: 0px;
     }
    
     
