--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
  font-family:RedHatDisplay, sans-serif;
  font-size: calc(16px + 3vw);
  z-index: 10;
- -webkit-text-stroke-width: 2.5px;
+ -webkit-text-stroke-width: 1.25px;
  -webkit-text-stroke-color: rgb(0, 0, 0);
 
  user-select: none;
@@ -118,7 +118,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
 
 .Herocard{
     min-height: fit-content;
-    min-width: fit-content;
+    /* min-width: fit-content; */
     max-width: 100%;
     max-height: 100%;
     width: 60%;
@@ -286,6 +286,13 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
            font-size: .75rem;
            
        }
+       
+   }
+
+   @media (max-width: 425px) {
+    .Herocard{
+        min-width: 100%;
+    }
    }
 
    @media (max-width: 560px) {
