--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,9 +32,9 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
  align-items: center;
  backdrop-filter: blur(8.5px);
  font-family:RedHatDisplay, sans-serif;
- font-size: calc(16px + 3vw);
+ font-size: calc(16px + 2.5vw);
  z-index: 10;
- -webkit-text-stroke-width: 1.25px;
+ -webkit-text-stroke-width: 1.75px;
  -webkit-text-stroke-color: rgb(0, 0, 0);
 
  user-select: none;
@@ -54,10 +54,10 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
 }
 
 .Navbar_header {
-    margin-top: 1%;
+    margin-top: 10%;
     /* display: inline-block; */
-    font-size: calc(18px + 1.5vw);
-    line-height: calc(16px + 1.5vh);
+    font-size: calc(18px + 2.5vw);
+    line-height: calc(16px + 2.5vh);
     text-align: right;
     flex-wrap: wrap;
     width: min-content;
@@ -131,7 +131,7 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
     font-family: RedHatDisplay, sans-serif;
     box-shadow: 0 15px 15px rgba(0,0,0,.6); 
     
-    user-select: none;
+    
 
     
     
@@ -274,7 +274,99 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
        width: 20%;
        justify-content: space-evenly;
    }
+   
+   .proj_img{
+       height: auto;
+       width: auto;
+       max-height: 15%;
+       max-width: 15%;
+       /* display: inline-block; */
+       /* float: right; */
+       margin-top: 16%;
+   }
 
+   /* .proj_links{
+       text-decoration: none;
+   } */
+
+
+   @media (max-width: 1200px) {
+    #Footer {
+       justify-content: space-around;
+
+
+    }
+    
+   }
+
+
+   @media (max-width: 1024px){
+    #Footer{
+        justify-content: space-around;
+        white-space: nowrap;
+
+    }
+    #Footer>p{
+        margin-left: 0;
+        margin-right: 0;
+        max-width: fit-content;
+    }
+    .Navbar_header{
+        line-height: calc(16px + 1.0vh);
+        margin-top: 5%;
+    }
+}
+
+@media (max-width: 768px){
+    .Aboutme_text{
+        padding-left: 0;
+        padding-right: 0;
+        width: fit-content;
+        max-width: 100vw;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 20%;
+
+    }
+    .Navbar{
+        -webkit-text-stroke-width: 0px;
+        font-size: calc(16px + 1.5vw);
+    }
+
+    .Navbar_header{
+        font-size: calc(18px + 1.5vw);
+        line-height: calc(16px + .5vh);
+        margin-top: 2%;
+    }
+   
+    
+
+
+   }
+
+   @media (max-width: 560px) {
+    .Herocard{
+        margin-top: 20vh;
+        font-size:calc(12px + 1vw);
+        padding-bottom: 5vh;
+        padding-right: 3vw;
+
+    }
+
+    #aboutme-container{
+        height: 140vh;
+    }
+    #Footer{
+     justify-content: center;
+ }
+    
+}
+
+@media (max-width: 425px) {
+    .Herocard{
+        min-width: 100%;
+    }
+   }
 
    @media (max-width: 375px) {
        .Aboutme_text{
@@ -289,70 +381,13 @@ background: linear-gradient(to right, hsla(172, 57%, 90%, 0),hsla(172, 57%, 67%,
        
    }
 
-   @media (max-width: 425px) {
-    .Herocard{
-        min-width: 100%;
-    }
-   }
-
-   @media (max-width: 560px) {
-       .Herocard{
-           margin-top: 20vh;
-           font-size:calc(12px + 1vw);
-           padding-bottom: 5vh;
-           padding-right: 3vw;
-
-       }
-
-       #aboutme-container{
-           height: 140vh;
-       }
-       #Footer{
-        justify-content: center;
-    }
-       
-   }
-   @media (max-width: 768px){
-    .Aboutme_text{
-        padding-left: 0;
-        padding-right: 0;
-        width: fit-content;
-        max-width: 100vw;
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 20%;
-
-    }
-    .Navbar{
-        -webkit-text-stroke-width: 0px;
-    }
    
-    
 
+   
+  
+   
 
-   }
-
-   @media (max-width: 1024px){
-    #Footer{
-        justify-content: space-around;
-        white-space: nowrap;
-
-    }
-    #Footer>p{
-        margin-left: 0;
-        margin-right: 0;
-        max-width: fit-content;
-    }
-}
-
-   @media (max-width: 1200px) {
-    #Footer {
-       justify-content: space-around;
-
-
-    }
-    
-   }
+   
 
 
 
